agregado ultima experiencia

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
               <div class="chart" data-percent="70" data-color="2ecc71">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Comunicacion</span>
+                      <span>Comunicación</span>
                     </div>
                 </div>
             </div>
@@ -711,7 +711,7 @@
     <!-- Resume Section -->
     <section id="resume" class="resume-section section-padding">
         <div class="container">
-            <h2 class="section-title wow fadeInUp">Resume</h2>
+            <h2 class="section-title wow fadeInUp">Resumen</h2>
             <div class="row">
                 <div class="col-md-12">
                     <div class="resume-title">
@@ -719,7 +719,31 @@
                     </div>
                     <div class="resume">
                         <ul class="timeline">
-<!-- EQUIFAX -->
+                          <li>
+                            <div class="posted-date">
+                              <span class="month">ABR . 2020 - NOV . 2020</span>
+                            </div><!-- /posted-date -->
+
+                            <div class="timeline-panel wow fadeInUp">
+                                <div class="timeline-content">
+                                    <div class="timeline-heading">
+                                        <h3>Dream & Do IT
+                                        <img src="assets/images/logoddit.png" alt="Responsive image" style="width: 25%" class="img-thumbnail">
+                                        </h3>
+                                        <h5>Administradora de paginas WEB</h5>
+                                        <span>Caballito - CABA</span>
+                                    </div><!-- /timeline-heading -->
+
+                                    <div class="timeline-body">
+                                        <p>Realizo tareas administrativas de mantenimiento de paginas web.
+                                          Actualización de paginas, HTML5, CSS, GIT, MySQL</p>
+                                    </div><!-- /timeline-body -->
+                                </div> <!-- /timeline-content -->
+                            </div><!-- /timeline-panel -->
+                          </li>
+
+ 
+                          <!-- EQUIFAX -->
 
                             <li class="timeline-inverted">
                                 <div class="posted-date">
@@ -755,7 +779,7 @@
                                             <img src="assets/images/adroguerunning.png" alt="Responsive image" style="width: 25%" class="img-thumbnail">
                                             </h3>
                                             <h5>Secretaria en gimnasio de complementos y Crossfit</h5>
-                                            <span>Adrogue Bs As</span>
+                                            <span>Adrogue BS AS</span>
                                         </div><!-- /timeline-heading -->
 
                                         <div class="timeline-body">
@@ -803,7 +827,7 @@
                                 <div class="timeline-panel wow fadeInUp">
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
-                                            <h3>CONTADOR PUBLICO</h3>
+                                            <h3>CONTADOR PÚBLICO</h3>
                                             <h5>U.N.L. Universidad Nacional de Lomas de Zamora</h5>
                                             <span>2º Año de la Carrera</span>
                                         </div><!-- /timeline-heading -->
