--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<section id="home" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
 		<div class="intro">
 			<div class="intro-sub">Micaela Villagra</div>
-			<h1>DESARROL<span>LADORA WEB</span></h1>
+			<h1>DESARROL<span>LADORA TRAINEE</span></h1>
 			<!-- <p>Soy un estudiante de Ingeniería Informática de la Universidad de Buenos Aires<br> Actualmente trabajo en Techint como desarrollador .NET.</p> -->
 
       <div class="social-icons">
@@ -107,7 +107,7 @@
           <div class="col-md-4 col-md-push-8">
             <div class="biography">
               <div class="myphoto">
-                <img src="assets/images/foto.png" alt="">
+                <img src="assets/images/mica.png" alt="">
               </div>
               <ul>
                 <li><strong>Nombre:</strong> Micaela Villagra</li>
@@ -165,7 +165,7 @@
 
             <div class="download-button">
               <a class="btn btn-info btn-lg" href="mailto:mika.villagra09@gmail.com"><i class="fa fa-paper-plane"></i>Enviarme un mail</a>
-               <!--<a class="btn btn-primary btn-lg" href="assets/cv.pdf" download><i class="fa fa-download"></i>Descargar mi CV</a>-->
+              <a class="btn btn-primary btn-lg" href="assets/Micaela Villagra.pdf" download><i class="fa fa-download"></i>Descargar mi CV</a>
 	            <!--<a class="btn btn-primary btn-lg" href="assets/cvIngles.pdf" download><i class="fa fa-download"></i>Download my Resume</a> -->
             </div>
           </div>
